--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -932,7 +932,7 @@ the network using (eq.\ref{eq:sum}) and (eq.\ref{eq:ac}) to find the activations
 \begin{scriptsize}
 \begin{itemize}
 
-\item The presents the computation graph for an MLP with one hidden-layer and a softmax output transformation.
+\item The figure above shows the computation graph for an MLP with one hidden-layer and a softmax output transformation.
 
 
 \item Oval nodes represent mathematical operations or functions, and shaded rectangle nodes represent parameters (bound variables).
@@ -1046,7 +1046,7 @@ addition , etc.).
 
 \item The backpropagation algorithm is essentially following the chain-rule of differentiation.
 
-\item The quantity  $\frac{\partial f_j}{ \partial i}$ is the partial derivative of $f_j(\pi^{-1}(j))$ w.r.t the argument $i \in \pi^-1(j)$.
+\item The quantity  $\frac{\partial f_j}{ \partial i}$ is the partial derivative of $f_j(\pi^{-1}(j))$ w.r.t the argument $i \in \pi^{-1}(j)$.
 
 \item This value depends on the function $f_j$ and the values $v(a_1), \dots, v(a_m)$  (where $a_1, \dots, a_m =  \pi^{-1}(j)$) of its arguments, which were computed in the forward pass.
 
