--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -126,7 +126,7 @@
 \end{frame}
 
 
-\begin{frame}{Neural Netoworks as Mathematical Functions}
+\begin{frame}{Neural Networks as Mathematical Functions}
 \begin{scriptsize}
 \begin{itemize}
 \item The Multilayer Perceptron (MLP) from the figure is called MLP2 because it has two hidden layers.
@@ -154,7 +154,7 @@
 
 
 
-\begin{frame}{Neural Netoworks as Mathematical Functions}
+\begin{frame}{Neural Networks as Mathematical Functions}
 \begin{scriptsize}
 \begin{itemize}
 \item MLP2 can be written as the following mathematical function:
@@ -289,7 +289,7 @@ the correct function generating our training data.
 \begin{frame}{ReLU}
 \begin{scriptsize}
 \begin{itemize}
-\item The rectifier activation function \cite{glorot2011deep}, also known as the recti fied linear unit is a very simple activation function.
+\item The rectifier activation function \cite{glorot2011deep}, also known as the rectified linear unit is a very simple activation function.
 \item It is easy to work with and was shown many times to produce excellent results.
 \item The ReLU unit clips each value $x < 0$ at $0$.
 \begin{displaymath}
@@ -334,7 +334,7 @@ the correct function generating our training data.
 
 \item In NLP the input to the neural network contains symbolic categorical features (e.g., words from a closed vocabulary, character n-grams, POS tags).
 
-\item In linear models we usually represent the input with sparse vectors e.g., as the sum or the concatenation of one-hot encoded vectors (the sum is equivalent to a bag-of words representation). 
+\item In linear models we usually represent the input with sparse vectors e.g., as the sum, average,  or the concatenation of one-hot encoded vectors (the sum or the average can produce bag-of words representation). 
 
 \item In neural networks, it is common to associate each possible feature value (i.e., each word in the vocabulary, each POS tag category) with a $d-$dimensional vector for some $d$.
 
