--- a/tutorials/Auxiliar_2.ipynb
+++ b/tutorials/Auxiliar_2.ipynb
@@ -173,8 +173,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:30:46.315573Z",
-     "start_time": "2019-09-24T14:30:42.817847Z"
+     "end_time": "2019-09-24T14:56:07.365560Z",
+     "start_time": "2019-09-24T14:56:03.833815Z"
     }
    },
    "outputs": [],
@@ -230,17 +230,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:41:27.188964Z",
-     "start_time": "2019-09-24T14:41:26.549218Z"
+     "end_time": "2019-09-24T15:02:17.995148Z",
+     "start_time": "2019-09-24T15:02:13.660644Z"
     }
    },
    "outputs": [],
    "source": [
     "# leer desde directorio local\n",
-    "#data = pd.read_json('./datasets/biobio_clean.bz2', encoding = \"utf-8\")\n",
-    "\n",
-    "#leer desde github\n",
-    "data = pd.read_json('https://github.com/dccuchile/CC6205/blob/master/tutorials/datasets/biobio_clean.bz2')"
+    "data = pd.read_json('./datasets/biobio_clean.bz2', encoding = \"utf-8\")\n"
    ]
   },
   {
@@ -260,8 +257,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:41:32.588592Z",
-     "start_time": "2019-09-24T14:41:32.570679Z"
+     "end_time": "2019-09-24T14:56:21.668660Z",
+     "start_time": "2019-09-24T14:56:21.649697Z"
     },
     "scrolled": true
    },
@@ -284,8 +281,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:41:34.588581Z",
-     "start_time": "2019-09-24T14:41:34.583595Z"
+     "end_time": "2019-09-24T14:56:21.727741Z",
+     "start_time": "2019-09-24T14:56:21.723725Z"
     }
    },
    "outputs": [],
@@ -322,8 +319,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:41:35.072032Z",
-     "start_time": "2019-09-24T14:41:35.067071Z"
+     "end_time": "2019-09-24T14:56:23.504007Z",
+     "start_time": "2019-09-24T14:56:23.498980Z"
     }
    },
    "outputs": [],
@@ -343,8 +340,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:42:56.915741Z",
-     "start_time": "2019-09-24T14:41:36.315711Z"
+     "end_time": "2019-09-24T14:57:46.370853Z",
+     "start_time": "2019-09-24T14:56:24.216332Z"
     }
    },
    "outputs": [],
@@ -357,8 +354,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:42:57.970692Z",
-     "start_time": "2019-09-24T14:42:57.964708Z"
+     "end_time": "2019-09-24T14:57:47.779782Z",
+     "start_time": "2019-09-24T14:57:47.773799Z"
     }
    },
    "outputs": [],
@@ -378,8 +375,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:42:59.216401Z",
-     "start_time": "2019-09-24T14:42:58.936111Z"
+     "end_time": "2019-09-24T14:57:49.457465Z",
+     "start_time": "2019-09-24T14:57:49.189495Z"
     }
    },
    "outputs": [],
@@ -644,8 +641,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:49:23.897409Z",
-     "start_time": "2019-09-24T14:49:23.462536Z"
+     "end_time": "2019-09-24T15:02:08.970566Z",
+     "start_time": "2019-09-24T15:02:08.880779Z"
     }
    },
    "outputs": [],
@@ -653,20 +650,7 @@
     "# Si entrenaste el modelo y lo quieres guardar, eliminar el comentario de la siguiente linea.\n",
     "#biobio_w2v.save('./pretrained_models/biobio_w2v.model')\n",
     "\n",
-    "biobio_w2v = KeyedVectors.load(\"./pretrained_models/biobio_w2v.model\", mmap='r')\n",
-    "\n",
-    "def load_model_from_github():\n",
-    "    import requests\n",
-    "    fnames = ['biobio_w2v.model', 'biobio_w2v.model.trainables.syn1neg.npy', 'biobio_w2v.model.wv.vectors.npy']\n",
-    "    url = 'https://github.com/dccuchile/CC6205/tree/master/tutorials/pretrained_models/'\n",
-    "    for fname in fnames:\n",
-    "        r = requests.get(url + fname)\n",
-    "        open(fname , 'wb').write(r.content)\n",
-    "\n",
-    "# cargar desde github (eliminar el comentario)\n",
-    "#load_model_from_github()        \n",
-    "\n",
-    "# cargar desde local o github\n",
+    "# cargar el modelo\n",
     "biobio_w2v = KeyedVectors.load(\"./pretrained_models/biobio_w2v.model\", mmap='r')\n"
    ]
   },
@@ -1017,8 +1001,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T14:50:14.072636Z",
-     "start_time": "2019-09-24T14:50:13.465573Z"
+     "end_time": "2019-09-24T14:57:50.911746Z",
+     "start_time": "2019-09-24T14:57:50.874842Z"
     }
    },
    "outputs": [],
@@ -1026,10 +1010,7 @@
     "#Guardar\n",
     "#tsne.to_csv('./pretrained_models/biobio_w2v_tsne.csv', index= False, index_label=False)\n",
     "# Cargar\n",
-    "#tsne = pd.read_csv('./pretrained_models/biobio_w2v_tsne.csv')\n",
-    "\n",
-    "# Cargar desde github\n",
-    "tsne = pd.read_csv('https://raw.githubusercontent.com/dccuchile/CC6205/master/tutorials/pretrained_models/biobio_w2v_tsne.csv')"
+    "tsne = pd.read_csv('./pretrained_models/biobio_w2v_tsne.csv')\n"
    ]
   },
   {
