--- a/slides/NLP-linear.tex
+++ b/slides/NLP-linear.tex
@@ -476,8 +476,8 @@ One-hot vectors of words. Source: \url{https://medium.com/@athif.shaffy/one-hot-
 Resulting in:
 \begin{equation}
 \begin{split}
-\hat{\vec{y}} \quad & =  \operatorname{softmax}(\vec{x} \cdot W + \vec{b})  \\
-\hat{\vec{y}}_{[i]} \quad & = \frac{e^{(\vec{x} \cdot W + \vec{b})_{[i]}}}{\sum_j e^{(\vec{x} \cdot W + \vec{b})_{[j]}}}
+\vec{\hat{y}} \quad & =  \operatorname{softmax}(\vec{x} \cdot W + \vec{b})  \\
+\vec{\hat{y}}_{[i]} \quad & = \frac{e^{(\vec{x} \cdot W + \vec{b})_{[i]}}}{\sum_j e^{(\vec{x} \cdot W + \vec{b})_{[j]}}}
 \end{split}
 \end{equation}
 \item The softmax transformation forces the values in $\hat{\vec{y}}$ to be positive and sum to 1, making them interpretable as a probability distribution.
@@ -685,16 +685,19 @@ to estimate the error and the gradients based on a sample of $m$ examples.
 \begin{frame}{Loss Functions}
 \begin{scriptsize}
 \begin{itemize}
+
+%\hat{y}=\sigma(f(\vec{x})) = \frac{1}{1+e^{-\vec{x}\cdot \vec{w}+b}} 
+
  \item The logistic loss has a probalistic interpration:
- \item We assume that $P(y =1 | \vec{x} ; \Theta) = f(\vec{x})$ and $P(y = 0 | \vec{x} ; \Theta) = 1 - f(\vec{x})$
+ \item We assume that $P(y =1 | \vec{x} ; \Theta) = \sigma(f(\vec{x})) = \frac{1}{1+e^{-\vec{x}\cdot \vec{w}+b}}$  and $P(y = 0 | \vec{x} ; \Theta) = 1 - \sigma(f(\vec{x}))$
  \item We can write this is a more compact way: 
  \begin{displaymath}
-  P(y | \vec{x} ; \Theta) = f(\vec{x})^y\times(1-f(\vec{x}))^{1-y}
+  P(y | \vec{x} ; \Theta) = \sigma(f(\vec{x}))^y\times(1-\sigma(f(\vec{x})))^{1-y}
  \end{displaymath}
 
  \item The above expression is the probability mass function of the Bernoulli distribution.
  
-\item Now we replace $f(\vec{x})$ by $\hat{y}$:
+\item Now we replace $\sigma(f(\vec{x}))$ by $\hat{y}$:
  \begin{displaymath}
   P(y | \vec{x} ; \Theta) = \hat{y}^y\times(1-\hat{y})^{1-y}
  \end{displaymath} 
@@ -718,16 +721,15 @@ to estimate the error and the gradients based on a sample of $m$ examples.
 \begin{scriptsize}
 \begin{itemize}
 
- \item Categorical cross-entropy loss:  is used when a probabilistic interpretation of multi-class scores is desired. It measures the dissimilarity between the true label distribution $y$ and the predicted label distribution $\tilde{y}$. 
+ \item Categorical cross-entropy loss:  is used when a probabilistic interpretation of multi-class scores is desired. It measures the dissimilarity between the true label distribution $\vec{y}$ and the predicted label distribution $\vec{\hat{y}}$. 
    \begin{displaymath}
-  L_{\text{cross-entropy}}(\hat{y},y) = - \sum_{i} y_{[i]} \log(\hat{y}_{[i]})   
+  L_{\text{cross-entropy}}(\vec{\hat{y}},\vec{y}) = - \sum_{i} \vec{y}_{[i]} \log(\vec{\hat{y}}_{[i]})   
  \end{displaymath}
-\item The predicted label distribution of the categorical cross-entropy loss ($\hat{y}$) is obtained by applying the softmax function the last layer of the network $\tilde{y}$:
+\item The predicted label distribution of the categorical cross-entropy loss ($\vec{\hat{y}}$) is obtained by applying the softmax function the last layer of the network $\vec{\tilde{y}}$:
     \begin{displaymath}
-\hat{y}_{[i]} = \text{softmax}(\tilde{y})_{[i]} =  \frac{e^{\tilde{y}_{[i]}}}{\sum_{j}e^{\tilde{y}_{[j]}}}   
+\vec{\hat{y}}_{[i]} = \text{softmax}(\vec{\tilde{y}})_{[i]} =  \frac{e^{\vec{\tilde{y}}_{[i]}}}{\sum_{j}e^{\vec{\tilde{y}}_{[j]}}}   
  \end{displaymath}
- 
-\item The softmax function squashes the $k$-dimensional output to values in the range (0,1) with all entries adding up to 1. Hence, $\hat{y}_{[i]} = P( y = i |x)$ represent the class membership conditional distribution.
+
  
 \end{itemize}
 \end{scriptsize}
@@ -736,7 +738,28 @@ to estimate the error and the gradients based on a sample of $m$ examples.
 \end{frame}
 
 
+\begin{frame}{Loss Functions}
+\begin{scriptsize}
+\begin{itemize}
 
+\item The softmax function squashes the $k$-dimensional output to values in the range (0,1) with all entries adding up to 1. Hence, $\vec{\hat{y}}_{[i]} = P( y = i |x)$ represent the class membership conditional distribution.
+
+
+\item For hard-classification problems in which each training example has a single correct class assignment, $\vec{y}$ is a one-hot vector representing the true class. 
+\item In such cases, the cross entropy can be simplified to:
+   \begin{displaymath}
+  L_{\text{cross-entropy(hard classification)}}(\vec{\hat{y}},\vec{y}) = -\log(\vec{\hat{y}}_{[t]})   
+ \end{displaymath}
+ where $t$ is the correct class assignment.
+
+ \item When using the cross-entropy loss, it is assumed that the classifier's output is transformed using the softmax transformation.
+
+ 
+\end{itemize}
+\end{scriptsize}
+
+
+\end{frame}
 
 
 \begin{frame}{Regularization}
@@ -952,9 +975,9 @@ set, so as to not bias the way you design your model.
 \begin{equation}
  \begin{split}
   (0,0) \cdot \vec{w} +b \quad & < 0 \\
-  (0,0) \cdot \vec{w} +b \quad & < 0 \\
-  (0,0) \cdot \vec{w} +b \quad & < 0 \\
-  (0,0) \cdot \vec{w} +b \quad & < 0 \\
+  (0,1) \cdot \vec{w} +b \quad & \geq 0 \\
+  (1,0) \cdot \vec{w} +b \quad & \geq 0 \\
+  (1,1) \cdot \vec{w} +b \quad & < 0 \\
  \end{split}
 \end{equation}
 \end{itemize}
